tests/ui/const-generics/generic_const_exprs/adt_wf_hang.stderr
error[E0741]: `U` must implement `ConstParamTy` to be used as the type of a const generic parameter
  --> $DIR/adt_wf_hang.rs:9:19
   |
LL | struct S<const N: U>()
   |                   ^
   |
help: add `#[derive(ConstParamTy)]` to the struct
   |
LL + #[derive(ConstParamTy)]
LL | struct U;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0741`.
